log
Thu 21 Mar 2024 08:12:54 PM UTC: 
 tests:  0|5
total_score: 0/70
1d92077
Thu 21 Mar 2024 08:20:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: ‘i’ undeclared (first use in this function)
   46 |   for (i = 1 ; i < 11 ; i++){
      |        ^
exercises.c:46:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8fa2e66
Thu 21 Mar 2024 08:21:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d39d210
Thu 21 Mar 2024 08:21:47 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
3a5aa97
Thu 21 Mar 2024 08:27:22 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:5: error: ‘elemetos’ undeclared (first use in this function); did you mean ‘elementos’?
   64 |     elemetos += *(int*)first(L);
      |     ^~~~~~~~
      |     elementos
exercises.c:64:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c4fad77
Thu 21 Mar 2024 08:27:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2aacbc5
Thu 21 Mar 2024 08:29:50 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:32: error: invalid use of undefined type ‘struct List’
   64 |     elementos += *(int*)first(L[i]);
      |                                ^
exercises.c:64:32: error: invalid use of incomplete typedef ‘List’
   64 |     elementos += *(int*)first(L[i]);
      |                               ~^~~
Compilation failed
0260e70
Thu 21 Mar 2024 08:33:47 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:5: error: ‘elemntos’ undeclared (first use in this function); did you mean ‘elementos’?
   66 |     elemntos = next(*L);
      |     ^~~~~~~~
      |     elementos
exercises.c:66:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:66:21: error: invalid use of incomplete typedef ‘List’
   66 |     elemntos = next(*L);
      |                     ^~
exercises.c:62:7: error: unused variable ‘elementos’ [-Werror=unused-variable]
   62 |   int elementos = 0;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a6cf3eb
Thu 21 Mar 2024 08:33:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:5: error: ‘elemntos’ undeclared (first use in this function); did you mean ‘elementos’?
   66 |     elemntos = next(L);
      |     ^~~~~~~~
      |     elementos
exercises.c:66:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:62:7: error: unused variable ‘elementos’ [-Werror=unused-variable]
   62 |   int elementos = 0;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b39ee4b
Thu 21 Mar 2024 08:34:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |       elementos = next(L);
      |                 ^
exercises.c:62:7: error: variable ‘elementos’ set but not used [-Werror=unused-but-set-variable]
   62 |   int elementos = 0;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d604121
Thu 21 Mar 2024 08:34:37 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   62 |   int elementos* ;
      |                ^
exercises.c:62:18: error: expected expression before ‘;’ token
   62 |   int elementos* ;
      |                  ^
exercises.c:66:7: error: unknown type name ‘elementos’
   66 |       elementos* = next(L);
      |       ^~~~~~~~~
exercises.c:66:18: error: expected identifier or ‘(’ before ‘=’ token
   66 |       elementos* = next(L);
      |                  ^
Compilation failed
2c92a5c
Thu 21 Mar 2024 08:35:15 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:16: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |     *elementos = next(L);
      |                ^
exercises.c:66:16: error: ‘elementos’ may be used uninitialized [-Werror=maybe-uninitialized]
   66 |     *elementos = next(L);
      |     ~~~~~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
66808f0
Thu 21 Mar 2024 08:39:16 PM UTC: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
1cefead
Thu 21 Mar 2024 08:41:04 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
91aa19b
Thu 21 Mar 2024 08:42:28 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:28: error: expected ‘;’ before ‘)’ token
   65 |     elemento += *(int*)dato);
      |                            ^
      |                            ;
exercises.c:65:28: error: expected statement before ‘)’ token
Compilation failed
3805971
Thu 21 Mar 2024 08:42:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f63d8e3
Thu 21 Mar 2024 08:49:38 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7802786
Thu 21 Mar 2024 08:50:51 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
f5f4f16
Thu 21 Mar 2024 08:51:21 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
c716463
Thu 21 Mar 2024 08:58:42 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
d48e365
Thu 21 Mar 2024 08:59:40 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
d149af8
Thu 21 Mar 2024 09:01:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9f3d64b
Thu 21 Mar 2024 09:02:10 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
c0bd7bc
Thu 21 Mar 2024 09:05:59 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
046caaa
